--- a/Main/src/main/res/values/dimen.xml
+++ b/Main/src/main/res/values/dimen.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="screen_padding_dp">4dp</dimen>
+    <dimen name="start_length_selector_padding_dp">8dp</dimen>
 </resources>
